--- a/i18n/ru-ru.yml
+++ b/i18n/ru-ru.yml
@@ -2,6 +2,7 @@ App:
   TBD: В разработке
   Login:
     Login: Вход
+    Guest: Гость
     Username: Имя пользователя
     Password: Пароль
     VK: Войти через ВКонтакте
@@ -25,6 +26,13 @@ App:
     $off: выкл # this doesn't work without $
     FAQ: Об игре
     FAQ_HREF: 'https://github.com/ivan-work/evolution-web/blob/master/faq-ru.md'
+    FAQ_TEXT: >-
+               <br/>Игра скопирована с настольной игры <a href="http://rightgames.ru/games/evolyuciya">"Эволюция: Происхождение Видов"</a>
+               <br/><br/>Адрес оф. сервера: <a href="https://evo2.herokuapp.com">https://evo2.herokuapp.com</a>
+               <br/><br/>Адрес неоф. сервера: <a href="https://evolution-hevav.herokuapp.com">https://evolution-hevav.herokuapp.com</a>
+               <br/><br/>Список изменений: <a href="https://github.com/ivan-work/evolution-web/blob/master/changelog.md">https://github.com/ivan-work/evolution-web/blob/master/changelog.md</a>
+               <br/><br/>Правила: <a href="https://vk.com/doc-36567706_134818567">https://vk.com/doc-36567706_134818567</a>
+               <br/><br/>Правила растений: <a href="https://hobbyworld.ru/download/rules/evo-plant_rus.pdf">https://hobbyworld.ru/download/rules/evo-plant_rus.pdf</a>
   Chat:
     Label: Чат
     EnterMessage: ...
